--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
 
   messenger:
     image: rabbitmq
-    volumes:
-      - "./data/mongo:/data/db"
+    ports:
+      - 5672:5672
 
   paris:
     build:
@@ -14,6 +14,7 @@ services:
     volumes:
       - "./application:/usr/src/app"
     environment:
+      - WHOAMI=paris
       - SESSION_SECRET=${ENV_VAYPA_SESSION_SECRET}
       - FLASK_APP=app.py
       - FLASK_DEBUG=1
@@ -33,6 +34,7 @@ services:
     volumes:
       - "./application:/usr/src/app"
     environment:
+      - WHOAMI=bangalore
       - SESSION_SECRET=${ENV_VAYPA_SESSION_SECRET}
       - FLASK_APP=app.py
       - FLASK_DEBUG=1
@@ -52,6 +54,7 @@ services:
     volumes:
       - "./application:/usr/src/app"
     environment:
+      - WHOAMI=newyork
       - SESSION_SECRET=${ENV_VAYPA_SESSION_SECRET}
       - FLASK_APP=app.py
       - FLASK_DEBUG=1
