--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,13 @@ version: '3.4'
 services:
 
   messenger:
-    image: rabbitmq
+    image: rabbitmq:management
     ports:
       - 5672:5672
+      - 15672:15672
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
 
   paris:
     build:
