--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,15 @@ services:
       - RABBITMQ_DEFAULT_USER=guest
       - RABBITMQ_DEFAULT_PASS=guest
 
+  zookeeper:
+    image: zookeeper
+    restart: always
+    hostname: zoo1
+    ports:
+      - 2181:2181
+    environment:
+      ZOO_MY_ID: 1
+
   paris:
     build:
       context: ./application
@@ -26,8 +35,10 @@ services:
       - RABBIT_URL=mongodb://mongo:27017
     depends_on:
       - messenger
+      - zookeeper
     links:
       - messenger
+      - zookeeper
     ports:
       - 6001:6000
     command: flask run --host=0.0.0.0 --port=6000
@@ -79,8 +90,10 @@ services:
       - RABBIT_URL=mongodb://mongo:27017
     depends_on:
       - messenger
+      - zookeeper
     links:
       - messenger
+      - zookeeper
     ports:
       - 6002:6000
     command: flask run --host=0.0.0.0 --port=6000
@@ -132,8 +145,10 @@ services:
       - RABBIT_URL=mongodb://mongo:27017
     depends_on:
       - messenger
+      - zookeeper
     links:
       - messenger
+      - zookeeper
     ports:
       - 6003:6000
     command: flask run --host=0.0.0.0 --port=6000
@@ -169,3 +184,4 @@ services:
     links:
       - messenger
     command: python consumer.py
+
