--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,6 +58,7 @@ services:
     environment:
       - WHOAMI=paris
       - PYTHONUNBUFFERED=1
+      - EXP=${EXP_ENV}
     depends_on:
       - messenger
       - cache
@@ -103,6 +104,7 @@ services:
     environment:
       - WHOAMI=bangalore
       - PYTHONUNBUFFERED=1
+      - EXP=${EXP_ENV}
     depends_on:
       - messenger
       - cache
@@ -148,6 +150,7 @@ services:
     environment:
       - WHOAMI=newyork
       - PYTHONUNBUFFERED=1
+      - EXP=${EXP_ENV}
     depends_on:
       - messenger
       - cache
